# workflow-clinic

./: .coverage  README.md  proposal.md  pyproject.toml  report.json
.github/workflows/: ci.yml
docs/: day1-parser.md  day2-rule-engine.md  day3-cli.md  day4-fetcher.md  day4.md  day5-doctor.md  day6-documentation.md  day7-issue-drafting.md  day8-snakemake.md  day9-pr.md
results/: AAFC-Bioinfo-AAC_metagenomics-nf.json  bethsheets_workflows-demo.json  doctor_AAFC-Bioinfo-AAC_metagenomics-nf.json  doctor_erinyoung_roundabout.json  doctor_nf-core_atacseq.json  doctor_nf-core_chipseq.json  doctor_nf-core_methylseq.json  erinyoung_roundabout.json  https:__github.com_nf-core_rnaseq.json  nf-core_atacseq.json  nf-core_chipseq.json  nf-core_methylseq.json  nf-core_rnaseq.json  nf-core_sarek.json
results/bethsheets/workflow-demo/: workflow-demo.md
results/issue_output/: proteinannotator.md  report.json  wf_issue.md
scripts/: collect_doctor_results.py  collect_real_results.py
tests/: test_cli.py  test_critic_engine.py  test_critic_snakemake.py  test_doctor.py  test_fetcher.py  test_github_client.py  test_llm_client.py  test_nextflow_parser.py  test_resource_rules.py  test_snakemake_parser.py
workflow_clinic/: cli.py
workflow_clinic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
workflow_clinic/core/: fetcher.py  github_client.py  llm_client.py
workflow_clinic/critic/: engine.py
workflow_clinic/doctor/: engine.py
workflow_clinic/parsers/: nextflow.py  registry.py  snakemake.py
workflow_clinic/schema/: gap_report.py
(+20 files in other folders)
