[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-clinic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
]

[project.scripts]
workflow-clinic = "workflow_clinic.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit",
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true